--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,23 +1,18 @@
-%h1 Listing lists
+.row
+  .col
+    %h1 Lists
 
-%table
-  %thead
-    %tr
-      %th Title
-      %th Owner
-      %th
-      %th
-      %th
+    = link_to 'New List', new_list_path
+    = link_to 'New Task', new_task_path
 
-  %tbody
+.row
+  .col
+    %ul
+      - @orphanTasks.each do |task|
+        %li= task.text
     - @lists.each do |list|
-      %tr
-        %td= list.title
-        %td= User.find(list.owner).email
-        %td= link_to 'Show', list
-        %td= link_to 'Edit', edit_list_path(list)
-        %td= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' }
-
-%br
-
-= link_to 'New List', new_list_path
+      %h3= list.title
+      = link_to '+ add Task', new_task_path(list: list)
+      %ul
+        - list.tasks.each do |task|
+          %li= task.text
