--- a/app/assets/stylesheets/parts/general.sass
+++ b/app/assets/stylesheets/parts/general.sass
@@ -30,3 +30,19 @@ a
 
 .container
   overflow: hidden
+
+a.add-link
+  text-align: center
+  float: right
+  height: 24px
+  width: 24px
+  border-radius: 15px
+  background-color: $yellow-d
+  color: $purple-l
+  font-size: 24px
+  line-height: 26px
+  margin-top: 12px
+  transition: background-color .4s ease
+  &:hover
+    color: $purple
+    background-color: $yellow
