--- a/app/assets/stylesheets/parts/shablam.sass
+++ b/app/assets/stylesheets/parts/shablam.sass
@@ -3,6 +3,8 @@ h1, h2, h3, h4
     display: inline-block
     padding-left: 45px
     padding-right: 40px
+    margin-top: 24px
+    margin-bottom: 4px
     overflow: hidden
     position: relative
     &:before
@@ -34,4 +36,4 @@ h1.header-title
     right: -200px
   &.mountain::after
     background-image: asset-url('icons/069-mountains.svg')
-    bottom: -10px
+    bottom: -20px
