--- a/app/assets/stylesheets/parts/header.sass
+++ b/app/assets/stylesheets/parts/header.sass
@@ -1,6 +1,6 @@
 .header
   position: relative
-  background-color: lighten($purple, 6%)
+  background-color: $purple-l
   border-bottom: $stroke solid $red-d
   padding: 20px 0
   margin-bottom: 10px
