--- a/app/assets/stylesheets/parts/shablam.sass
+++ b/app/assets/stylesheets/parts/shablam.sass
@@ -37,3 +37,9 @@ h1.header-title
   &.mountain::after
     background-image: asset-url('icons/069-mountains.svg')
     bottom: -20px
+  .add-link
+    margin-top: 16px
+    margin-left: 16px
+    background-color: $purple
+    &:hover
+      background-color: $yellow
