--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,9 +1,6 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Righteous&display=swap')
-
 @import 'parts/vars'
 
 @import 'parts/general'
 @import 'parts/header'
-
+@import 'parts/quasi_modal'
 @import 'parts/shablam'
