--- a/app/views/lists/_form.html.haml
+++ b/app/views/lists/_form.html.haml
@@ -1,17 +1,3 @@
-= form_for @list do |f|
-  - if @list.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@list.errors.count, "error")} prohibited this list from being saved:"
-      %ul
-        - @list.errors.full_messages.each do |message|
-          %li= message
-
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :owner
-    = f.hidden_field :owner, value: current_user.id
-    = f.text_field :dummy, value: current_user.email, disabled: true
-  .actions
-    = f.submit 'Save'
+= form_for @list, remote: true do |f|
+  = f.text_field :title, placeholder: 'name           '
+  = f.hidden_field :owner, value: current_user.id
