--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,13 +1,12 @@
--# .container.text-center
-%h1.header-title.mountain Lists
-%section.container
-  = link_to 'New List', new_list_path
+%h1.header-title.mountain
+  Lists
+  = link_to '+', new_list_path, class: 'add-link', remote: true
 
 %section.container
   .row
     .col-12
-      = link_to '+', new_task_path, class: 'add-link'
-      %ul
+      = link_to '+', new_task_path, class: 'add-link', remote: true
+      %ul.tasklist
         - @orphanTasks.each do |task|
           %li= task.text
 - @lists.each do |list|
@@ -16,7 +15,7 @@
   %section.container
     .row
       .col-12
-        = link_to '+', new_task_path(list: list), class: 'add-link'
-        %ul
+        = link_to '+', new_task_path(list: list), class: 'add-link', remote: true
+        %ul.tasklist
           - list.tasks.each do |task|
             %li= task.text
