--- a/app/views/tasks/new.js.erb
+++ b/app/views/tasks/new.js.erb
@@ -1,3 +1,28 @@
 $('.quasi-modal').addClass('active')
 $('.quasi-modal .content').html("<%= j (render partial: 'form') %>")
 $('.quasi-modal .content input').focus()
+
+$('.quasi-modal .content input').on('input', function(e) {
+  if (/^-[i][123]|^-t/.test($(e.target).val())) {
+    switch (/^-[i][123]|^-t/.exec($(e.target).val())[0]) {
+      case "-t":
+        $('.quasi-modal small.tomorrow').removeClass('d-none')
+        $(e.target).val('')
+        break;
+      case "-i1":
+        $('.quasi-modal small.important.one').removeClass('d-none')
+        $(e.target).val('')
+        break;
+      case "-i2":
+        $('.quasi-modal small.important.two').removeClass('d-none')
+        $(e.target).val('')
+        break;
+      case "-i3":
+        $('.quasi-modal small.important.three').removeClass('d-none')
+        $(e.target).val('')
+        break;
+      default:
+        break;
+    }
+  }
+})
