--- a/app/assets/stylesheets/parts/quasi_modal.sass
+++ b/app/assets/stylesheets/parts/quasi_modal.sass
@@ -22,31 +22,20 @@
     left: -50%
     border: 3px solid lighten($purple-l, 40%)
     border-radius: 10px
-    padding: 10px 25px
     background-color: $purple-l
 
   input
-    border: none
-    border-bottom: 3px solid lighten($brown, 5%)
-    background-color: $purple
-    min-width: 340px
-    color: $white
-    font-size: 22px
-    text-align: center
-    caret-color: $turq
-    margin-top: 15px
-    padding: 3px 8px 0
-    &:focus
-      outline-width: 0
-    &.cursor-left
-      text-align: left
+    min-width: 440px
+    padding: 7px 10px
+    border-radius: 8px
+    font-size: 24px
 
   form small
     display: inline-block
     color: lighten($purple-l, 40%)
     &.modifier
       font-weight: 700
-      padding-right: 5px
+      padding-left: 7px
     &.tomorrow
       color: $turq-d
     &.one
