--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -3,4 +3,5 @@
 @import 'parts/general'
 @import 'parts/header'
 @import 'parts/quasi_modal'
+@import 'parts/user_handling'
 @import 'parts/shablam'
