--- a/app/assets/stylesheets/parts/general.sass
+++ b/app/assets/stylesheets/parts/general.sass
@@ -30,6 +30,10 @@ a
     text-decoration: none
     color: $yellow
 
+span.white
+  color: $white
+  font-weight: 700
+
 .container
   overflow: hidden
 
@@ -51,6 +55,15 @@ a.add-link
     background-color: $yellow
     transform: rotate(-90deg)
 
+a.logout-link
+  position: absolute
+  top: 100px
+  color: $purple
+  font-size: 16px
+  line-height: 24px
+  &:hover
+    color: $yellow
+
 ul.tasklist
   margin-bottom: 0
   padding-left: 0
@@ -64,3 +77,27 @@ ul.tasklist
 
     &:last-child
       margin-bottom: 0
+
+form
+  input[type="submit"]
+    color: $turq
+    border: 3px solid lighten($brown, 5%)
+    border-radius: 10px
+    font-weight: bold
+    font-family: 'Righteous', sans-serif
+    background-color: $brown-d
+    padding: 5px 25px
+    transition: background-color .4s ease
+    &:hover
+      background-color: $purple
+  input
+    border: none
+    border-bottom: 3px solid lighten($brown, 5%)
+    background-color: $purple
+    font-family: 'Merriweather', serif
+    color: $white
+    font-size: 22px
+    caret-color: $turq
+    padding: 3px 8px 0
+    &:focus
+      outline-width: 0
