--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -14,8 +14,8 @@
     %small.float-left.modifier.d-none.important.three
       hi!prio
     .clearfix
-  .help.d-none
-    %small
-      %span.white
-        = '-t / -[ip][123]'
-      sets task to tomorrow / importance[123]
+.help.help-quasimodal
+  %small
+    %span.white
+      = '-t / -[ip][123]'
+    sets task to tomorrow / importance[123]
