list links stub

--- a/app/assets/stylesheets/parts/quasi_modal.sass
+++ b/app/assets/stylesheets/parts/quasi_modal.sass
@@ -10,9 +10,11 @@
   .h
     visibility: visible
 .quasi-modal .overlay
+  z-index: 3
   background-color: transparent
   transition: background-color .4s ease
 .quasi-modal .h
+  z-index: 7
   position: fixed
   left: 50%
   top: 150px
