--- a/app/assets/stylesheets/parts/shablam.sass
+++ b/app/assets/stylesheets/parts/shablam.sass
@@ -38,8 +38,8 @@ h1.header-title
     background-image: asset-url('icons/069-mountains.svg')
     bottom: -20px
   .add-link
-    margin-top: 16px
-    margin-left: 16px
     background-color: $purple
+    right: -36px
+    top: 16px
     &:hover
       background-color: $yellow
