--- a/app/assets/stylesheets/parts/general.sass
+++ b/app/assets/stylesheets/parts/general.sass
@@ -2,12 +2,15 @@ body
   background: $brown-d
 
 section
+  position: relative
   background: $brown
   border-radius: 15px
   margin-top: 10px
   margin-bottom: 10px
   padding-top: 15px
   padding-bottom: 15px
+  border: 3px solid lighten($brown, 5%)
+  overflow: hidden
 
 h1, h2, h3, h4
   font-family: 'Righteous', sans-serif
@@ -26,7 +29,7 @@ a
   font-family: 'Merriweather', serif
   font-weight: 700
   color: $yellow-d
-  transition: color .4s ease
+  transition: color .4s ease, background-color .4s ease
   &:hover
     text-decoration: none
     color: $yellow
@@ -35,26 +38,32 @@ span.white
   color: $white
   font-weight: 700
 
-.container
-  overflow: hidden
-
 a.add-link
+  position: absolute
+  top: 6px
+  right: 6px
   text-align: center
-  float: right
   height: 24px
   width: 24px
   border-radius: 15px
   background-color: $yellow-d
   color: $purple-l
   font-size: 24px
-  line-height: 24px
-  margin-top: -10px
-  margin-right: -10px
-  transition: background-color .4s ease, transform .4s ease
+  line-height: 22px
+  transition: transform .4s ease
+  z-index: 3
   &:hover
     color: $purple
     background-color: $yellow
-    transform: rotate(-90deg)
+    transform: rotate(90deg)
+  &.new-link
+    right: 42px
+    color: $yellow-d
+    background-color: $purple
+    &:hover
+      color: $yellow
+      background-color: $purple-l
+
 
 a.header-link
   position: absolute
@@ -76,13 +85,28 @@ ul.tasklist
   li
     font-size: 18px
     list-style-type: none
-    background-color: lighten($brown, 5%)
+    background-color: $brown-d
     border-radius: 10px
     margin-bottom: 10px
-    padding: 0 24px
-
+    padding: 2px 10px
     &:last-child
       margin-bottom: 0
+
+.linklist
+  text-align: right
+  height: 100%
+  padding-top: 30px
+  padding-left: 15px
+  margin-right: -9px
+  .alink
+    display: inline-block
+    position: relative
+    background-color: $purple
+    border-radius: 10px
+    padding: 4px 10px
+    margin-bottom: 5px
+    &:hover
+      background-color: $purple-l
 
 form
   input[type="submit"]
