--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -1,6 +1,8 @@
 = form_for @task, remote: true do |f|
   = f.text_field :text
   = f.hidden_field :creator, value: current_user.id
+  = f.hidden_field :flg_tomorrow
+  = f.hidden_field :nbr_prio
   .additionals
     - if params[:list]
       %small.float-right= '~/' + List.find(params[:list]).title + '/...'
