--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -4,23 +4,30 @@
 
 %section.container
   = link_to '+', new_task_path, class: 'add-link', remote: true
-  = link_to '>', new_task_path, class: 'add-link new-link', remote: true
+  = link_to '>', new_lnk_path, class: 'add-link new-link', remote: true
   .row.no-gutters
     .col-10
       %ul.tasklist
         - @orphanTasks.each do |task|
-          %li= task.text
+          %li{ class: "#{task.flg_tomorrow ? 'tomorrow' : ''} prio-#{task.nbr_prio}"}
+            = task.text
     .col-2
       .linklist
-        = link_to 'dummy', root_path, target: '_blank', class: 'alink'
-        = link_to 'Design Projekt XY superlanger link', root_path, target: '_blank', class: 'alink'
+        - @orphanLnks.each do |lnk|
+          = link_to lnk.text, lnk.href, target: '_blank', class: 'alink'
 - @lists.each do |list|
   .container.text-center
     %h3.flashy= list.title
   %section.container
     = link_to '+', new_task_path(list: list), class: 'add-link', remote: true
+    = link_to '>', new_lnk_path(list: list), class: 'add-link new-link', remote: true
     .row
       .col-10
         %ul.tasklist
           - list.tasks.each do |task|
-            %li= task.text
+            %li{ class: "#{task.flg_tomorrow ? 'tomorrow' : ''} prio-#{task.nbr_prio}"}
+              = task.text
+      .col-2
+        .linklist
+          - list.lnks.each do |lnk|
+            = link_to lnk.text, lnk.href, target: '_blank', class: 'alink'
