--- a/app/views/tasks/new.js.erb
+++ b/app/views/tasks/new.js.erb
@@ -5,36 +5,44 @@ $('.quasi-modal .content input').focus()
 $('.quasi-modal .content input').on('input', function(e) {
   if (/^-[ip][123]|^-t/.test($(e.target).val())) {
     switch (/^-[ip][123]|^-t/.exec($(e.target).val())[0]) {
-      case "-t":
-        $('.quasi-modal small.tomorrow').removeClass('d-none')
-        $(e.target).val('')
-        break;
-      case ("-i1"):
-        $('.quasi-modal small.important.one').removeClass('d-none')
-        $(e.target).val('')
-        break;
-      case ("-p1"):
-        $('.quasi-modal small.important.one').removeClass('d-none')
-        $(e.target).val('')
-        break;
-      case "-i2":
-        $('.quasi-modal small.important.two').removeClass('d-none')
-        $(e.target).val('')
-        break;
-      case "-p2":
-        $('.quasi-modal small.important.two').removeClass('d-none')
-        $(e.target).val('')
-        break;
-      case "-i3":
-        $('.quasi-modal small.important.three').removeClass('d-none')
-        $(e.target).val('')
-        break;
-      case "-p3":
-        $('.quasi-modal small.important.three').removeClass('d-none')
-        $(e.target).val('')
-        break;
-      default:
-        break;
+    case "-t":
+      setTomorrow(e.target)
+      break;
+    case ("-i1"):
+      setPrio(e.target, 1, 'one')
+      break;
+    case ("-p1"):
+      setPrio(e.target, 1, 'one')
+      break;
+    case "-i2":
+      setPrio(e.target, 2, 'two')
+      break;
+    case "-p2":
+      setPrio(e.target, 2, 'two')
+      break;
+    case "-i3":
+      setPrio(e.target, 3, 'three')
+      break;
+    case "-p3":
+      setPrio(e.target, 3, 'three')
+      break;
+    default:
+      break;
     }
   }
 })
+
+setTomorrow = function(input) {
+  $('.quasi-modal small.tomorrow').removeClass('d-none')
+  $('#task_flg_tomorrow').val(true)
+  $(input).val('')
+}
+setPrio = function(input, prio, prio_s) {
+  $('.quasi-modal small.important.one').addClass('d-none')
+  $('.quasi-modal small.important.two').addClass('d-none')
+  $('.quasi-modal small.important.three').addClass('d-none')
+  $('.quasi-modal small.important.' + prio_s).removeClass('d-none')
+
+  $('#task_nbr_prio').val(prio)
+  $(input).val('')
+}
