--- a/app/assets/stylesheets/parts/help.sass
+++ b/app/assets/stylesheets/parts/help.sass
@@ -10,8 +10,20 @@
     display: block
     height: 20px
     width: 20px
-    background-image: asset-url('icons/059-idea.svg')
+    background-image: asset-url('icons/help-bright.svg')
     background-size: contain
     position: absolute
     left: 5px
     bottom: 5px
+
+@media only screen and (max-width: $MINImax)
+  .help-quasimodal
+    &::before
+      height: 16px
+      width: 16px
+      left: 10px
+      bottom: 6px
+    small
+      font-size: 10px
+      line-height: 12px
+      display: inline-block
