--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -10,9 +10,10 @@
   .row.no-gutters
     .col-md-9.col-lg-10.col-12
       %ul.tasklist
-        - @orphanTasks.each do |task|
-          %li{ class: "#{task.flg_tomorrow ? 'tomorrow' : ''} prio-#{task.nbr_prio}"}
+        - incomplete(@orphanTasks).each do |task|
+          %li{ class: "#{task.flg_tomorrow ? 'tomorrow' : ''} prio-#{task.nbr_prio}", id: "task-#{task.id}" }
             = task.text
+            = link_to '', complete_task_path(task.id), method: :patch, remote: true, class: 'check'
     .col-md-3.col-lg-2.col-12
       .linklist
         - @orphanLnks.each do |lnk|
@@ -26,9 +27,10 @@
     .row
       .col-md-9.col-lg-10.col-12
         %ul.tasklist
-          - list.tasks.listed.each do |task|
-            %li{ class: "#{task.flg_tomorrow ? 'tomorrow' : ''} prio-#{task.nbr_prio}"}
+          - incomplete(list.tasks.listed).each do |task|
+            %li{ class: "#{task.flg_tomorrow ? 'tomorrow' : ''} prio-#{task.nbr_prio}", id: "task-#{task.id}" }
               = task.text
+              = link_to '', complete_task_path(task.id), method: :patch, remote: true, class: 'check'
       .col-md-3.col-lg-2.col-12
         .linklist
           - list.lnks.each do |lnk|
