--- a/app/assets/stylesheets/parts/general.sass
+++ b/app/assets/stylesheets/parts/general.sass
@@ -118,6 +118,7 @@ ul.tasklist
       font-size: 14px
       margin-bottom: 5px
       border-width: 1px !important
+      padding-right: 34px
       &.fadeout
         margin-bottom: -23px
       a.check
