--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -19,7 +19,7 @@
         - @orphanLnks.each do |lnk|
           = link_to lnk.text, lnk.href, target: '_blank', class: 'alink'
 - @lists.each do |list|
-  .container.text-center
+  .container.text-sm-center
     %h3.flashy= list.title
   %section.container
     = link_to '+', new_task_path(list: list), class: 'add-link', remote: true
