--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,8 @@
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'quasi_modal'
 
+    %link{ rel: 'manifest', href: '/manifest.json' }
+
   %body{ class: current_user.try(:wants_help) ? 'show-help' : '' }
     = render 'parts/header'
     = yield
