--- a/app/assets/stylesheets/parts/general.sass
+++ b/app/assets/stylesheets/parts/general.sass
@@ -67,7 +67,7 @@ a.add-link
     font-size: 18px
     right: 54px
 
-ul.tasklist
+ul.tasklist, ul.boardlist
   margin-bottom: 0
   padding-left: 0
   li
