--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -16,7 +16,7 @@
     %small.float-left.modifier.d-none.important.three
       hi!prio
     .clearfix
-.help.help-quasimodal
+.help.help-icon.help-quasimodal
   %small
     %span.white
       = '-t / -[ip][123]'
