--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -2,6 +2,7 @@
 
 @import 'parts/general'
 @import 'parts/header'
+@import 'parts/nav'
 @import 'parts/quasi_modal'
 @import 'parts/user_handling'
 @import 'parts/help'
