--- a/app/assets/stylesheets/parts/quasi_modal.sass
+++ b/app/assets/stylesheets/parts/quasi_modal.sass
@@ -26,25 +26,15 @@
     border-radius: 10px
     background-color: $purple-l
 
-  input
+  form input
     min-width: 440px
     padding: 7px 10px
     border-radius: 8px
     font-size: 24px
-
-@media only screen and (max-width: $MINImax)
-  .quasi-modal .h
-    .content
-      max-width: 100%
-      left: -50%
-    input
-      min-width: unset
-      max-width: 100%
-      font-size: 20px
-
   form small
     display: inline-block
     color: lighten($purple-l, 40%)
+    padding-bottom: 2px
     &.modifier
       font-weight: 700
       padding-left: 7px
@@ -56,3 +46,13 @@
       color: $orange-d
     &.three
       color: $red-d
+
+@media only screen and (max-width: $MINImax)
+  .quasi-modal .h
+    .content
+      max-width: 100%
+      left: -50%
+    input
+      min-width: unset
+      max-width: 100%
+      font-size: 20px
