--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,15 +1,14 @@
-- if @board
+- if @home_board
   .header-interceptor
-    .container
-      %h1.header-title.mountain
-        = @board.title
-      = link_to '+', new_list_path(board: @board.id), class: 'header-link add-link', remote: true
+    .container.position-relative
+      = render partial: 'parts/board_nav'
+      = link_to '+', new_list_path(board: @home_board.id), class: 'header-link add-link', remote: true
   = render partial: 'boards/show'
 
 - else
   .header-interceptor
-    .container
-      %h1.header-title.mountain
+    .container.position-relative
+      %h1.header-title
         Welcome
       = link_to '+', new_board_path, class: 'header-link add-link', remote: true
   %section.container
