--- a/app/assets/stylesheets/parts/header.sass
+++ b/app/assets/stylesheets/parts/header.sass
@@ -66,8 +66,8 @@
     width: 50%
     position: relative
     left: 50%
-    padding-top: 52px
-    padding-left: 64px
+    margin-top: 52px
+    margin-left: 64px
   .header-link
     position: absolute
     top: 62px
