task adding from partial

--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -18,7 +18,7 @@
     %small.float-left.modifier.d-none.important.three
       hi!prio
     .clearfix
-.help.help-icon.help-quasimodal
+.help.help-icon.help-quasimodal.text-center
   %small
     %span.white
       = '-t / -[ip][123]'
