--- a/app/views/lists/_show.html.haml
+++ b/app/views/lists/_show.html.haml
@@ -7,9 +7,7 @@
     .col-md-9.col-lg-10.col-12
       %ul.tasklist
         - incomplete(list.tasks.listed).each do |task|
-          %li{ class: "#{task.flg_tomorrow ? 'tomorrow' : ''} prio-#{task.nbr_prio}", id: "task-#{task.id}" }
-            = task.text
-            = link_to '', complete_task_path(task.id), method: :patch, remote: true, class: 'check'
+          = render partial: 'tasks/listed_task', locals: { task: task }
     .col-md-3.col-lg-2.col-12
       .linklist
         - list.lnks.each do |lnk|
