--- a/app/views/tasks/add_task.js.erb
+++ b/app/views/tasks/add_task.js.erb
@@ -1,4 +1,4 @@
-$('#list-<%= @task.list_id %> ul.tasklist').append("<li id='task-<%= @task.id %>'><%= @task.text %></li>")
+$('#list-<%= @task.list_id %> ul.tasklist').append("<%= j (render partial: 'tasks/listed_task', locals: { task: @task }) %>")
 
 $('.quasi-modal').removeClass('active')
 $('.quasi-modal .content').html("")
