fix mobile titles

--- a/app/assets/stylesheets/parts/header.sass
+++ b/app/assets/stylesheets/parts/header.sass
@@ -86,9 +86,11 @@
 
   .header-interceptor
     .header-title
-      left: 48px
+      left: 0
       padding-top: 22px
       padding-left: 0
+      margin-top: 0
+      margin-left: 48px
       font-size: 24px
     .header-link
       top: 55px
