--- a/app/assets/stylesheets/parts/general.sass
+++ b/app/assets/stylesheets/parts/general.sass
@@ -134,6 +134,9 @@ ul.boardlist li
     background-position: center
     &:hover
       background-color: lighten($brown, 10%)
+  &.home-board
+    &:after
+      content: '(home-board)'
 
 @media only screen and (max-width: $MINImax)
   ul.tasklist li, ul.boardlist li
