--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -3,7 +3,17 @@
 @import 'parts/general'
 @import 'parts/header'
 @import 'parts/nav'
+@import 'parts/boards'
 @import 'parts/quasi_modal'
 @import 'parts/user_handling'
 @import 'parts/help'
-@import 'parts/shablam'
+
+.groovy
+  @import 'groovy/general'
+  @import 'groovy/header'
+  @import 'groovy/nav'
+  @import 'groovy/boards'
+  @import 'groovy/quasi_modal'
+  @import 'groovy/user_handling'
+  @import 'groovy/help'
+  @import 'groovy/shablam'
