--- a/app/assets/stylesheets/parts/help.sass
+++ b/app/assets/stylesheets/parts/help.sass
@@ -2,11 +2,11 @@
   display: none
 .show-help .help
   display: block
-.help-quasimodal
-  color: lighten($purple-l, 40%)
+// .help-quasimodal
+//   color: lighten($purple-l, 40%)
 .help-section
-  color: $white
-  background-color: $purple-l
+  // color: $white
+  // background-color: $purple-l
   border-radius: 5px
   margin-bottom: 10px
 .help-icon
