--- a/app/assets/stylesheets/parts/header.sass
+++ b/app/assets/stylesheets/parts/header.sass
@@ -1,7 +1,7 @@
 .header
   position: relative
-  background-color: $purple-l
-  border-bottom: $stroke solid $red-d
+  // background-color: $purple-l
+  // border-bottom: $stroke solid $red-d
   padding: 20px 0
   margin-bottom: 30px
 
@@ -13,22 +13,22 @@
 
   #header-logo
     path
-      fill: $white
+      // fill: $white
       transition: fill .8s ease, transform .8s ease
       transform-origin: center
-      &.r3
-        fill: $yellow
-      &.r2
-        fill: $orange
-      &.r1
-        fill: $red
+      // &.r3
+      //   fill: $yellow
+      // &.r2
+      //   fill: $orange
+      // &.r1
+      //   fill: $red
 
-  a:hover #header-logo
-    path.r1
-      fill: $yellow
-      transform: rotate(90deg)
-    path.r3
-      fill: $red
+  // a:hover #header-logo
+  //   path.r1
+  //     fill: $yellow
+  //     transform: rotate(90deg)
+  //   path.r3
+  //     fill: $red
 
   .header-links
     position: absolute
@@ -43,13 +43,13 @@
       padding: 0 20px
       background-image: asset-url('icons/chain-dark.svg')
       background-size: contain
-      background-color: lighten($purple-l, 5%)
+      // background-color: lighten($purple-l, 5%)
       background-position: center
       background-repeat: no-repeat
       height: 28px
       width: 28px
-      &:hover
-        background-color: lighten($purple-l, 10%)
+      // &:hover
+      //   background-color: lighten($purple-l, 10%)
       &.help-tgl
         z-index: 12
         background-image: asset-url('icons/help-bright.svg')
@@ -72,7 +72,7 @@
     position: absolute
     top: 62px
     right: 9px
-    background-color: $red-d
+    // background-color: $red-d
 
 @media only screen and (max-width: $MINImax)
   .header
